# aipbuilder

./: .gitignore  README.md  aipbuilder.ipynb  build_airspaces.py  country_borders.py  crs.py  curved_geometries.py  dms_to_decimal.py  example.ipynb  example_border_provider.py  providers.py  pyproject.toml
example-data/: airspaces.csv  danger_areas.csv  fir.csv  reporting_points.csv  restricted_areas.csv
example-data/borders/: example_borders.dbf  example_borders.gpkg  example_borders.shp  example_borders.shx
src/aipbuilder/: build_airspaces.py  country_borders.py  crs.py  curved_geometries.py  dms_to_decimal.py  providers.py  util.py
src/aipbuilder/features/: airspace.py  reporting_points.py
src/aipbuilder/tools/: list_border_entry_points.py
src/airspace_renderer/: airspace.py  country_borders.py  curved_geometries.py  dms_to_decimal.py  util.py
