[project]
name = "aipbuilder"
version = "0.0.1"
description = "A tool for building geospatial datasets from textual aeronautical information publications (AIPs)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.19.6",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.3",
    "pyproj>=3.7.1",
    "ruff>=0.11.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aipbuilder",
]

[tool.uv.sources]
aipbuilder = { workspace = true }
